# harness-20260708

./: .gitignore  .skogai  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKOGAI.md  SPEC.md  feature_list.json  functions.json  init.sh  mcp.json  mise.toml  package.json  progress.md  session-handoff.md  skills  skogai.json
.claude/: README.md  settings.json
.claude-old/: settings.json
.claude-plugin/: README.md  marketplace.json
.codex/: hooks.json
.docs/: what-is-a-harness.md
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.skogix/: what-is-a-harness.md
dev/: PLANNING.md
docs/: README.md  features.md  implementation.md  what-is-a-harness.md
marketplace/: .mcp.json  AGENTS.md  CLAUDE.md  README.md
scripts/: AGENTS.md  _lib.py  _validate_file.py  install-global.sh  list_routers.py  (+2 more)
skogharness/: README.md  pyproject.toml
skogharness/dev/: KNOWLEDGE.md  TASK.md
skogharness/src/skogharness/: pytest_plugin.py
skogharness/src/skogharness/agents/: README.md  example.md
skogharness/src/skogharness/cli/: install_skill.py  main.py
skogharness/src/skogharness/commands/: README.md  example.md
skogharness/src/skogharness/hooks/: README.md
skogharness/src/skogharness/mcp/: README.md  example.md
skogharness/src/skogharness/modes/: README.md  example.md
skogharness/src/skogharness/skills/atomic-commit-discipline/: SKILL.md
skogharness/src/skogharness/skills/harness-creator/references/: multi-agent-pattern.md  tool-registry-pattern.md
skogharness/tests/unit/: test_categories.py  test_install_skill.py
(+1311 files in other folders)
