[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skogharness"
version = "0.1.0"
description = "Installer package that builds this repo's .claude/ content from versioned source categories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"

dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
skogharness = "skogharness.cli.main:main"

[project.entry-points.pytest11]
skogharness = "skogharness.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/skogharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
